0027065: BRepOffsetAPI_MakePipe misses definition of virtual method Generated()

Virtual method Generated() inherited from BRepPrimAPI_MakeSweep is overridden in class BRepOffsetAPI_MakePipe, providing information on shapes generated from the profile.